force-app/main/default/objects/Calibration_Record__c/Calibration_Record__c.object-meta.xml
<CustomObject>
    <description>Calibration records for measuring instruments on EPC projects, tracking validity and due dates.</description>
    <label>Calibration Record</label>
    <nameField>
        <displayFormat>CAL-{00000}</displayFormat>
        <label>Calibration Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Calibration Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>