force-app/main/default/objects/Calibration_Record__c/fields/Calibration_Date__c.field-meta.xml
<CustomField>
    <fullName>Calibration_Date__c</fullName>
    <label>Calibration Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>