force-app/main/default/objects/Calibration_Record__c/fields/Certificate_URL__c.field-meta.xml
<CustomField>
    <fullName>Certificate_URL__c</fullName>
    <label>Certificate URL</label>
    <type>Url</type>
</CustomField>