force-app/main/default/objects/Calibration_Record__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <label>Next Calibration Due</label>
    <required>true</required>
    <type>Date</type>
</CustomField>