force-app/main/default/objects/Calibration_Record__c/fields/Instrument__c.field-meta.xml
<CustomField>
    <fullName>Instrument__c</fullName>
    <label>Instrument</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>