force-app/main/default/objects/Calibration_Record__c/fields/Serial_No__c.field-meta.xml
<CustomField>
    <fullName>Serial_No__c</fullName>
    <label>Serial No.</label>
    <length>100</length>
    <type>Text</type>
</CustomField>